--- a/techstack.html
+++ b/techstack.html
@@ -15,15 +15,15 @@
     <meta name="Googlebot" content="index,follow" />
     <meta name="AdsBot-Google" content="index,follow" />
 
-    
-
+  
     <!-- Twitter Posts -->
-   
+    <meta name="twitter:site" content="" />
 
     <meta name="application-name" content="Akash Chawdhery | Tech Stack" />
     <meta name="apple-mobile-web-app-title" content="Akash Chawdhery | Tech Stack" />
     <meta name="summary"
-           <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
+        content="An open source project aimed at providing free and beautiful templates to everyone for building their portfolio websites and showcase their work to the world." />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
         integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
         crossorigin="anonymous" />
